RESOLVED FIXED310360
Address potential memory leak in StringImpl::reallocateInternal()
https://bugs.webkit.org/show_bug.cgi?id=310360
Summary Address potential memory leak in StringImpl::reallocateInternal()
Chris Dumez
Reported 2026-03-20 07:53:56 PDT
Address potential memory leak in StringImpl::reallocateInternal().
Attachments
Chris Dumez
Comment 1 2026-03-20 07:55:53 PDT
EWS
Comment 2 2026-03-21 03:18:31 PDT
Committed 309679@main (1ff4770e5669): <https://commits.webkit.org/309679@main> Reviewed commits have been landed. Closing PR #61008 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-21 03:19:13 PDT
Note You need to log in before you can comment on or make changes to this bug.