Cherry-pick 309679@main (1ff4770e5669). https://bugs.webkit.org/show_bug.cgi?id=310360

Address potential memory leak in StringImpl::reallocateInternal()
    https://bugs.webkit.org/show_bug.cgi?id=310360

    Reviewed by Darin Adler.

    realloc() only frees the memory for this input pointer when it succeeds.
    In case of failure, we would return and leak that memory.

    Not likely to happen in practice but still a bug.

    * Source/WTF/wtf/text/StringImpl.cpp:
    (WTF::StringImpl::reallocateInternal):

    Canonical link: https://commits.webkit.org/309679@main

Canonical link: https://commits.webkit.org/298234.513@webkitglib/2.50